[build-system]
requires = ["hatchling>=1.20.0"]
build-backend = "hatchling.build"

[project]
name = "rolla"
version = "0.3.2a0"
description = "Console dice roller with strict TDD"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Andrew Pomerleau" }]
dependencies = []

[project.scripts]
rolla = "rolla.cli:main"

[tool.pytest.ini_options]
addopts = "-q"

[tool.hatch.build]
packages = ["src/rolla"]
